cp03/sc05.tex: 手工完成录入

--- a/vol1/cp03/sc05.tex
+++ b/vol1/cp03/sc05.tex
@@ -1,4 +1,5 @@
 ﻿\section{凝胶法晶体生长}
+凝胶法晶体生长的发展史可追溯到1896年，因为在这一年中，Liesegang观察到了微溶盐在动物胶中周期性结晶现象，这种现象被后人称为Liesegang环。随后，Fisher和Simons等提出了“在完全可控制的条件下，几乎所有的物质的晶体生长，凝胶均可成为良好的介质”的论点。1965年Henish发表了酒石酸钙在凝胶中生长的著名论文。1970年，Henish的专著《凝胶法晶体生长》出版，全面论述了凝胶法晶体生长的全貌与发展动向。从此以后，凝胶法生长晶体在国际范围内有了进一步的\footnote{原文作“地”}发展。
 
 \input{vol1/cp03/sc05_01.tex} %凝胶法晶体生长特点
 \input{vol1/cp03/sc05_02.tex} %凝胶的制备、性质和结构
