cp02/sc01_04.tex: 部分录入周期键链理论

--- a/vol1/cp02/sc01_04.tex
+++ b/vol1/cp02/sc01_04.tex
@@ -36,5 +36,15 @@ d_{hkl}=\frac{a}{2\sqrt{h^2+k^2+l^2}}
 
 上述所讨论的晶体形态与晶体结构间的联系只能看作是一个粗略的轮廓，它是晶体结构对称性在其形态上反映的一些信息，但在实际情况下，由于晶体生长的外界因素及其结构基元间键合作用的影响，即便是同一品种的晶体生长形态往往也会有所不同，这样就远非像Bravais法则所推论的那样简单了。
 
-\paragraph{(2)周期键链理论}
-% TODO: 周期键链理论
+\paragraph{(2)周期键链理论(periodic bond chain, PBC)} Hartman和Perdok等在探索晶体形态与其结构的关系时，提出了周期键链理论，此理论是在晶体化学基础上建立起来的晶体形态理论，对于具有复杂结构的晶体实验观察表明，其生长形态是可以用周期键链理论来阐明的。此理论的基本假设是，在晶体生长过程中，于生长界面上形成一个键所需要的时间随着键合能的增加而减少，因而生长界面的法向生长速率随键合能的增加而增加。由于键合能的大小决定了生长界面的法向生长速率，故键合能的大小也就决定的晶体的生长形态。该理论认为晶体结构是由周期键链（PBC）所组成的，晶体生长最快的方向是化学键最强的方向，晶体生长是在没有中断的强键链存在的方向上，这里所说的强键是在晶体生长过程中形成的强键。晶体生长过程所能出现的晶面可划分为三种类型，即$F$面、$S$面、$K$面。划分面的标准为
+
+$F$面：或称平坦面（flat faces），它包含两个或两个以上的共面的PBC（$\bm{PBC}$矢量）。
+
+$S$面：或称台阶面（stepped faces），它包含一个PBC（$\bm{PBC}$矢量）。
+
+$K$面：或称扭折面（kinked faces），它不包含PBC（$\bm{PBC}$矢量）。
+
+所设想的PBC模型，如图2.2所示。
+
+在图2.2中，假设晶体中具有三种$\bm{PBC}$矢量，其中$\bm{A}\text{ 矢量}\parallelsum [100]$、$\bm{B}\text{ 矢量}\parallelsum [010]$、$\bm{C}\text{ 矢量}\parallelsum [001]$方向。这些$\bm{PBC}$矢量确定了六个$F$面，即$(001),(00\bar{1});(010),(0\bar{1}0);(100),(\bar{1}00)$面；三个$S$面即$(011),(101)$和$(110)$面；一个$K$面，即$(111)$面。从图2.2中还可看出，一个结构基元生长在$F$面上，只形成一个不在$F$面上的$\bm{PBC}$矢量；一个结构基元生长在$S$面上，形成的强键比$F$面上的数目多；而在$K$面上形成的强键数最多。因此，$F$面的生长速率最慢，$S$面的生长速率次之，而$K$面生长速率最快，因而$K$面是易于消失的晶面。晶体生长的最终形态多为$F$面包围，其余的为$S$面。
+
