common/packages.tex: 引入bm宏包以解决矢量印刷的粗斜体问题

--- a/common/packages.tex
+++ b/common/packages.tex
@@ -3,6 +3,7 @@
 \hypersetup{linkcolor=black}
 \usepackage{amsmath}
 \usepackage{amssymb}
+\usepackage{bm}
 \usepackage{subfigure}
 \usepackage{enumerate}
 \usepackage{booktabs}
