common/macros.tex: 新增宏解决平行符号问题

--- a/common/macros.tex
+++ b/common/macros.tex
@@ -4,3 +4,5 @@
 \newcommand{\tabincell}[2]{\begin{tabular}{@{}#1@{}}#2\end{tabular}}
 % 解决俄文字体问题
 \newfontinstance{\timesnewroman}{Times New Roman}
+% 解决平行符号问题
+\newcommand{\parallelsum}{\mathbin{\!/\mkern-5mu/\!}}
