cp03/sc05_01.tex & sc05_02.tex: 完成文字录入

--- a/vol1/cp03/sc05_01.tex
+++ b/vol1/cp03/sc05_01.tex
@@ -1,2 +1,12 @@
 \subsection{凝胶法晶体生长特点}
+与通常广泛应用的溶液法、熔体法、熔盐法和气相法等相比，凝胶法晶体生长是一种易于被人们忽视的方法，所使用的育晶设备虽然较为简单，但所涉及的物理化学过程变化多样，此方法本身具有下述的一些独特的优点。
 
+\begin{enumerate}[(1)]\itemsep -0.5ex
+\item 凝胶质软、性惰、多孔、半透明，且为不流动的半固体，凝胶介质有效地控制了流体的对流、湍流及外界扰动的发生。凝胶保持了化学上的惰性，且无害于晶体生长。凝胶骨架对晶体生长起到了“三维坩埚”支撑作用，它自然地服从于晶体生长形状，防止了晶体与容器底部或器壁的碰撞，使晶体保持完全无损的状态。
+\item 凝胶具有微孔结构，有过滤、隔离成核和抑制成核的作用，因此不仅可使晶体降低杂质污染，并且有益于均匀成河以及均匀掺质晶体生长的研究。
+\item 由于凝胶法晶体生长过程是在近于室温环境下进行的，故所生长出的晶体含有较少的热缺陷，从而提高了晶体的完整性。
+\item 实际上，由于凝胶可以降低化学试剂的扩散速度，因此可以控制溶质的扩散速率和成核速率，有利于进行晶体生长基本理论的研究。
+\item 凝胶法所用的育晶装置简便，化学试剂用量较少，生长的晶体品种较多，适用性很广，便于为研制新型功能晶体材料提供测试样品。
+\end{enumerate}
+
+事物总是一分为二的，凝胶法虽然有上述优点，但无疑也存有不足之处，如凝胶虽有抑制成核的作用，能减少非均匀成核的概率，但还很难保证在凝胶中仅有少数几个晶核成长，因此在一般情况下，生长线度为厘米级以上的晶体，除针状晶体外，当前还存在着一定的困难。
