--- a/vol1/cp03/sc05_02.tex
+++ b/vol1/cp03/sc05_02.tex
@@ -1,2 +1,37 @@
 \subsection{凝胶的制备、性质和结构}
+凝胶是一种具有半固态、富液体、高粘滞性且含有微孔的二组分体系，其中一个组分的分子键合成三维网络，而另一组分通过渗透而形成连续相。凝胶介质不仅是指由硅酸钠溶液制备的硅水凝胶，而且还包括各种有机凝胶，例如从海藻中得到的碳水化合物高聚物（琼脂\footnote{原文作“酯”。}胶）、类似于蛋白质结构的明胶、聚丙烯酰胺、醋酸纤维、四甲氧基硅、四乙氧基硅、硬脂酸盐、铝酸盐等。但硅水凝胶是最普遍使用的一种凝胶，这是由于它比其他有机凝胶更适用于绝大多数晶体的生长。
+
+将硅酸钠（$\rm Na_2SiO_3\cdot 9H_2O$）加入水中，酸化后可有硅酸产生，硅酸的一个重要特性是它的聚合作用，影响硅酸聚合作用的因素较多，其中最重要的因素是溶液的酸度。胶凝时间与溶液的pH值的关系曲线如图3.40所示。
+
+（图3.40）
+
+欲得某一确定pH值的凝胶介质，在不断搅拌情况下，准确地加入需要量的酸于硅酸钠水溶液中，该溶液的酸度值决定着凝胶的聚合过程和速度。胶凝时间可从几秒钟、几分钟到几天、几十天或更长的时间。
+
+当硅酸钠在强酸溶液中时，硅酸离子的逐步酸化过程为
+
+（化学图）
+
+氢离子与硅酸中的氧原子结合后，硅氧（！！！化学图！！！）键长即增加。若配位在Si原子周围的$\rm Si-O$键键长都增加，则其配位数即可增大。因此至少在$\rm H_3SiO_4^+$离子（式IV）内的Si的配位数可增到6，可写为
+
+（化学图）
+
+在碱性溶液中，硅酸存在的形式为式(I)和式(II)，两者均带负电荷，顾客认为不易起聚合作用或聚合作用极慢，且随碱度的增加而聚合减慢。
+
+在微碱性、中性和微酸性溶液中，硅酸存在的主要形式为式(II)和式(III)，两者相遇便可发生聚合作用，从而生成
+
+（化学图）
+
+此种聚合将以$\rm Si-O$键为基础在三维空间延续而形成网络结构。
+
+在较高酸度的溶液中，离子(III)与(IV)相互作用，聚合成为
+
+（化学图）
+
+以上两种类型的聚合反应机制，前者有$\rm OH^-$离子释出，故在聚合过程中溶液的pH值增高，而后者会使溶液的pH值略有降低。当两种反应同时进行时，溶液的pH值便无明显的\footnote{原文作“地”。}变化。
+
+采用酒石酸、醋酸或硝酸作为胶凝剂所制得的凝胶均为透明的。但弱酸作为胶凝剂应用的比较多，这首先是由于用弱酸作胶凝剂，凝胶的pH值随时间变化较小；其二是由于无机酸或多或少地对晶体生长具有一定的损害作用。但使用何种酸为宜，则要视所生长晶体的类型而定。
+
+将酸加入硅酸钠溶液中时，须严防凝胶中气泡的形成，若气泡一旦形成，将很难把气泡从凝胶中排除。此乃往往会阻止晶体生长。
+
+凝胶液的pH值是决定凝胶结构及其性质非常重要的因素，同时在晶体生长过程中也起着重要的作用。硅水凝胶的结构网络，具有两种类型的微孔，一类微孔接近分子尺度，另一类表现为正常的毛细管大小。硅水凝胶的X射线衍射花样同硅玻璃相比，凝胶所具有的均匀性差些。在温和的条件下对硅水凝胶进行干燥，凝胶的总体积变化甚小，干燥过的凝胶易于作X射线衍射实验，可获得更多的结构信息，在对比的情况下，对硅水凝胶也可获得很有意义的实验结果。经估算，硅水凝胶的有效微孔直径约为$5-10\rm\ nm$，脱水收缩作用对微孔平均尺寸的影响甚小。此外，在制备凝胶时所采用的酸的性质和浓度，硅酸钠溶液的密度及硅酸钠的纯度，环境温度，化学试剂在凝胶中的浓度等都是影响凝胶法晶体生长的重要因素。
 
