cp02/sc02_01.tex: typo fix

--- a/vol1/cp02/sc02_01.tex
+++ b/vol1/cp02/sc02_01.tex
@@ -42,7 +42,7 @@ J_x=-D_{Li}\frac{\partial c_i}{\partial x}
 \frac{\partial c_i}{\partial t} = D_{Li}(\frac{\partial^2c_i}{\partial x^2}+\frac{\partial^2c_i}{\partial y^2}+\frac{\partial^2c_i}{\partial z^2}).
 \end{equation}
 
-扩散系数$D_{Li}$一般都作为常数，但严格地来讲，它并不是常熟，而是溶质浓度的函数，而且$D_{Li}$的数值取决于实验条件，在一定的温度下，$D_{Li}$是从一系列溶质浓度中所测量出来的平均值，并称它为积分扩散系数。如果只是从一个溶质浓度中测量出的数值，则称为微分扩散系数。文献中所记载的许多物质的$D_{Li}$值既不是积分扩散系数，也不是微分扩散系数，而是根据$D_{Li}$与溶质浓度无关的假设而计算出来的数值，它是表征气相或溶液输运性质的重要参数，$D_{Li}$的单位为$\mathrm{cm^2/s}$。
+扩散系数$D_{Li}$一般都作为常数，但严格地来讲，它并不是常数，而是溶质浓度的函数，而且$D_{Li}$的数值取决于实验条件，在一定的温度下，$D_{Li}$是从一系列溶质浓度中所测量出来的平均值，并称它为积分扩散系数。如果只是从一个溶质浓度中测量出的数值，则称为微分扩散系数。文献中所记载的许多物质的$D_{Li}$值既不是积分扩散系数，也不是微分扩散系数，而是根据$D_{Li}$与溶质浓度无关的假设而计算出来的数值，它是表征气相或溶液输运性质的重要参数，$D_{Li}$的单位为$\mathrm{cm^2/s}$。
 
 关于对流输运的问题，由于生长晶体流体（气\footnote{原文作“汽”。}体、溶液）本身的组成往往是多组元的，因此描述晶体生长的对流输运，应该是混合流体的动力学方程式。为了使问题简化起见，只考虑不可压缩的定常流体，这样，物质的对流扩散方程可表示为
 \begin{equation}
