cp02/sc07_01.tex & sc07_02.tex: 整合CelestialGazer录入内容

--- a/vol1/cp02/sc07_01.tex
+++ b/vol1/cp02/sc07_01.tex
@@ -1,1 +1,19 @@
 \subsection{微重力概念}
+宇宙空间任何两个物体之间均存在吸引力，而且其引力大小正比于两物体的质量之积，反比于它们之间的距离，这就是著名的牛顿万有引力定律。自由落体因受到地心的引力，会产生铅直方向的加速运动。若把地球表面的平均重力加速度记为$g_0$，则$g_0=980 \rm\ cm/s^2$。在太空中的物体，由于与地球作用距离的增加，重力加速度将减少。若重力减少到零，则物体处于零重力失重状态。所谓微重力是指重力减少到地球表面重力百万分之一时的重力场。严格说来，在数值上，微重力的精确定义应为$g=10^{-6}g_0$，但目前“微重力”概念已延拓，通常把$g<10^{-2}g_0$的重力环境均称为微重力环境。考虑到未来的星际飞行，对于微重力的概念作些延拓是有意义的。因为月球上的重力场为$0.16g_0$，火星上的重力场为$0.3g_0$，微重力概念延拓以后，就可以把星际飞行重力环境中的科学实验称为微重力科学实验。
+
+如何获得微重力环境，开展微重力科学研究呢？从理论上说，根据牛顿万有引力定律，只要把实验舱发射到远离地球的太空，就可以实现微重力环境。可是，由于技术上的原因，目前并不走这条路，而是根据爱因斯坦等效性原理模拟失重状态。爱因斯坦等效原理叙述为：自由落体的重力被惯性局部抵偿。因而自由飞行的轨道航天器作为自由落体的特殊形式，可以模拟微重力或零重力环境。在自由漂移的航天器内，其质心位置上的重力与离心力相平衡，处于失重状态。
+
+所有类型的自由下落轨迹都适用于微重力环境的模拟。目前用于模拟微重力环境的设备和装置见表2.5。
+
+（表2.5）
+
+在分子水平上，重力是弱作用力，它比氢原子中静电力小$10^{40}$倍，比氢分子中电磁力小$10^35$倍。因此，由分子间作用力所决定的性质估计和重力无关。但若没有其他作用力与重力平衡，则在存在大质量时，重力会起主要作用。那么重力究竟在哪些方面起重要影响呢？美国微重力研究委员会1992年公布了到2000年的微重力研究战略，其中提到了下述7个方面：
+
+\paragraph{(1)重力作为流体中对流的驱动力}因温度和组分的不均匀而产生的密度差，使静止状态的流体发生对流，导致热量传递和质量输运。在地面上原子或分子的对流比因布朗运动引起的漫迁移大1个数量级。
+\paragraph{(2)重力作为相分离的驱动力}对于某些热力学体系，存在共存相，其化学势等同，但密度有差别，在重力作用下，经过长时间后会发生沉淀，导致相分离。
+\paragraph{(3)重力作为决定流体自然表面形态的力}在热力学平衡或近平衡系统中，流体表面或界面形态决定于力的平衡。比如气泡、液滴和浮区的形状主要受重力支配。
+\paragraph{(4)临界现象}在临界点附近，流体的压缩率非常大，流体在自身重量下分层。因此，对于任何有限体积流体热力学参量的测量，实际测出的是不同密度流体的平均性质而不是临界点的真实性质。这种重力对实验所施加的基本限制，只有在微重力环境下才能得到抑制。
+\paragraph{(5)存在极弱键合力的系统——生命系统}生命系统中生物大分子的键合力极弱，重力扮演重要作用。比如蛋白质晶体的结晶、生物细胞的融合等。
+\paragraph{(6)存在极大质量和极长时间的系统}比如：广义相对论和引力波。
+\paragraph{(7)大尺寸构件和超长距离}比如建筑和桥梁的协强，地球及其大气层内长距离自然现象等。
+
