--- a/vol1/cp02/sc07_02.tex
+++ b/vol1/cp02/sc07_02.tex
@@ -1,1 +1,21 @@
 \subsection{空间微重力晶体生长实验}
+空间晶体生长始于70年代初期的Apollo空间实验。1971---1973年期间，在Apollo 14，16和17号飞船上进行了Benard胞、对流、凝固和复合物材料晶体生长实验，为微重力条件下的晶体生长打下了最初的实验基础。自1973年美国在天空实验室首先生长出酒石酸钾钠晶体以来，世界上发达国家为争夺空间科学研究和空间开发的高技术优势，进行了多次微重力条件下晶体生长实验。同时，在地面上进行了大量实验和理论模拟。研究人员先后在空间条件下探索了从光电子材料到蛋白质生物大分子晶体等几十种功能晶体的生长，在实验设备方面已动用巨资制造了各种晶体生长实验装置，以适用双扩散法、低温溶液法、气相法、浮区法、高温移动加热器法和坩埚下降法等晶体生长方法的实验要求。在晶体生长基础理论方面，研究了微重力条件下的晶体成核理论、生长动力学理论、纯扩散生长机制和形态稳定性理论。一系列理论分析和实验表明，开展微重力条件下的晶体生长规律研究，不仅会加深对微重力效应的认识，而且可能引起材料科学的重大突破。人们预计在微重力条件下将有可能生长出极有价值的新晶体。
+
+20多年来，空间晶体生长大体经历3个发展阶段。70年代初、中期为第一阶段，在此期间，人们误以为空间晶体生长是零重力条件下的物化反应过程。似乎在地面上存在的许多与重力有关的问题，在微重力条件下都可以得到解决。实验结果表明，重力大大减弱以后，表面张力驱动对流上升为占支配地位的作用力，为了探索微重力条件下的晶体生长规律，必须深入研究次级力场效应。70年代中期到80年代中期为第二阶段，这是晶体生长设备的设计、制造和新方法探索阶段。在这阶段内，人们利用空间微重力条件生长各种晶体，回到底面以后对其形态、结构和晶体完整性进行观察和分析。通过空间-地面的实验对比，评估微重力条件下晶体生长的潜在效益。80年代后期开始为第三阶段。将激光全息术和显微照相术应用于空间晶体生长，在微重力条件下实时记录晶体生长过程，研究空间晶体生长的特有规律，从而获得最佳微重力晶体生长条件。下面介绍几例空间晶体生长实验：
+
+\paragraph{(1)熔体晶体生长}迄今为止，在空间微重力条件下，从熔体中生长的方法有坩埚下降法、区熔法和移动加热器法，生长实验见表2.6。
+
+（表2.6）
+
+\paragraph{(2)气相晶体生长}在空间环境下，应用化学气相输运和物理气相输运法研究了$\rm\alpha-HgI_2$，$\rm CdSe$，$\rm PbTe$，$\rm ZnTb$，$\rm ZnO$和$\rm Ge$等单晶体生长，其中对$\rm\alpha-HgI_2$晶体生长研究较为系统，在1985-1992年期间进行了5次空间微重力实验。最成功的一次实验是1992年进行的国际微重力实验室（IML-1）实验。据报道，在空间所获得的$\rm\alpha-HgI_2$单晶体的尺寸和性能都很理想。表2.7是几次$\rm\alpha-HgI_2$空间实验条件和结果。
+
+\paragraph{(3)高温溶液晶体生长}空间高温溶液晶体生长中所应用的技术是坩埚下降法和移动加热器法。表2.8列述了某些晶体的生长参量。
+
+（表2.7）
+
+（表2.8）
+
+\paragraph{(4)溶液法晶体生长}对于高溶解度晶体材料，在地面上一般采用恒温蒸发法、降温法和循环流动法。原则上在空间环境也可以采用上述方法。目前，由于技术上的原因，一般采用降温法。对于低溶解度晶体材料来说，在地面上采用凝胶法生长。凝胶的作用在于：（1）抑制自然对流，使晶体生长过程受纯扩散的支配；（2）支撑晶体，使晶体悬于容器中免受外力的作用。凝胶的这两个作用在微重力条件下都得到满足。所以在空间用溶质扩散反应法就可以替代凝胶法，习惯上把它称为双扩散法。表2.9列出溶液法晶体生长的实例。
+
+（表2.9）
+
