cp02/sc07_03.tex: 整合CelestialGazer录入内容

--- a/vol1/cp02/sc07_03.tex
+++ b/vol1/cp02/sc07_03.tex
@@ -1,1 +1,60 @@
 \subsection{微重力状态下的输运过程}
+重力对流体的输运性质有重要影响。这种影响是宏观的，主要与重力驱动的对流和由阿基米德力引起的上浮和下沉有关，因而流体的所有输运性质都与微重力这个概念密切相关。
+
+晶体生长过程是固体结晶基元和流体结晶基元在特定条件下的相互作用和能量再分配过程。结晶过程总是离不开固体成分和流体成分。因固体内部结合力远大于1个$g_0$的重力，所以结晶过程仅需考虑流体成分受重力的影响，在溶液中流体的粘着力和表面张力与$g_0$的重力同数量级，液体的常规性质是内分子力和重力相互作用的结果。假如重力消失，流体的行为将受内分子力支配。因而，微重力条件将影响晶体的生长过程。结晶体系中能量的再分配离不开质量的输运和热量的传递，质量的输运通过对流和扩散途径进行，而热量传递则通过对流传导和辐射途径进行。在微重力条件下，扩散将支配质量输运过程。晶体生长的输运问题将变成Stefan问题。在数学物理方程的处理上就变成求解自由边界和运动边界的扩散微分方程问题。基于上述原因，为了认识微重力条件下晶体生长的动力学特征，研究扩散引起的质量输运的理论和实验现象就十分必要了。
+
+\paragraph{(1)扩散理论}扩散是气体、液体和固体中的普遍现象。扩散系数的典型值对气体是$\rm 1\ cm^2/s$，对液体是$10^{-5}\ \rm cm^2/s$，对固体通常则远低于$10^{-8}\ \rm cm^2/s$。解释扩散现象的基本定律是Fick第一定律和第二定律，如2.2.3节所述。流体中的扩散理论模型可归纳如下：
+
+\begin{enumerate}[(i)]\itemsep -0.5ex
+\item 准晶模型。假设流体中的原子是按照类似于在固体里的排列方式，原子或分子的扩散必须克服激活势垒。扩散系数和温度的函数关系，服从（Arrhenius）方程（2.125）
+\begin{equation}
+D=D_0\exp(-\frac{Q}{kT}),
+\end{equation}
+式中$D_0$是指数前因子，$Q$是激活能，$k$是玻尔兹曼常数，$T$为绝对温度。
+
+\item 自由体积模型。假设原子或分子扩散到与其相邻的自由体积内，自由体积具有临界体积$V_c$，扩散系数$D$和温度遵循下列方程：
+\begin{equation}
+D=AT\exp(-\frac{BV_c}{V_f}),
+\end{equation}
+式中$A,B$是与材料物性有关的参数，$V_f$是液体的总体积。
+
+\item 涨落理论。假设原子或原子集团由于热振动（布朗运动）而进入周围自由体积内，而且自由体积没有临界尺寸。扩散系数和温度满足二次函数关系
+\begin{equation}
+D=AT^2,
+\end{equation}
+式中$A$是与原子相互作用势能有关的常数。
+
+\item 能斯脱-爱因斯坦-斯托克斯（Nernst-Einstein-Stokes）关系。假设扩散系数可以表示为驱动力和摩擦力之比，即
+\begin{equation}
+D=\frac{kT}{6\pi\eta r},
+\end{equation}
+式中$\eta$为粘滞系数，$r$是扩散原子的半径。
+\end{enumerate}
+
+在地面上，由于重力驱动对流的存在使得地面实验结果不准确，甚至还不能决定哪些模型可正确地描述其与温度的依赖关系。在空间环境中，重力驱动的自然对流大大减弱或得到消除，因此可完成一些精度足够高的实验，并可精确地测定由扩散控制的质量输运性质，进而导致关于流体中扩散和输运的新的理论概念，也会促进地面晶体生长技术的变革和生长理论的完善。科学家还语言微重力条件下将会出现新晶体和新理论。
+
+\paragraph{(2)空间实验结果}
+\begin{enumerate}[(i)]\itemsep -0.5ex
+\item 自扩散实验。1983年11月在空间实验室-1中进行了$\rm Sn$的自扩散实验。用16个样品，作了不同温度下的8次实验。每次用直径分别为$\rm 1\ mm$和$\rm 3\ mm$的两个样品。每个样品长$\rm 55\ mm$，在其一端固定$\rm 4\ mm$厚的稳态$\rm Sn$同位素圆片。稳态的同位素$\rm^{124}Sn$和$^{112}Sn$用来检测自扩散系数和同位素效应。表2.10列出了$\rm Sn$的自扩散实验结果。
+
+（表2.10）
+
+在表2.10中$E$为同位素效应。$D_{112}$和$D_{124}$分别为两种Sn同位素的扩散系数。从空间实验获得的扩散系数比地面值低20-40\%。这表明在地面上进行$D$的测量时，对流有明显影响。另一个重要结果是扩散系数和温度的关系为二次函数，即
+
+（图2.51）
+
+\begin{equation}
+D({\rm Sn})=AT^2,
+\end{equation}
+式中$A=0.745\times 10^{-16}\ \rm cm^2/k^2s$，即在$\pm2\%$的精度内，扩散系数和温度是平方关系。这个结果支持了涨落理论。
+
+\item 互扩散实验。空间条件下的玻璃熔体实验首先是在探空火箭上进行的，$\rm Na_2O\cdot3SiO_2$和$\rm Rb_2O\cdot3SiO_2$熔体在$1200$℃温度下持续$\rm 200\ s$。后来在空间实验室（LS-1）上重做了实验。实验温度$\rm 1280$℃，持续时间$\rm 1730\ s$。图2.51示出微重力条件下的实验结果。图2.52示出相同条件的地面实验结果。这两个对比实验表明：在地面上由于有对流的存在，Na和Rb的浓度分布曲线不规则，用它几乎不可能测定有意义的扩散系数。而在微重下，理论数据和实验数据符合得很好。空间实验数据分析还表明：当Na和Rb的浓度相同时，扩散系数最大。
+
+（图2.52）
+
+\item GeSe和GeTe的质量输运速率。在天空实验室（Skylab-3）上已研究了IV-VI族半导体GeSe和GeTe的化学输运反应。用$\rm GeI_4$作为输运载体。密封石英管的尺寸为$\Phi\rm13\times150\ mm$。在实验过程中，先升温$\rm3\ h$，再在生长温度下恒温$\rm33\ h$，然后降温到室温，降温过程历时$\rm12\ h$。表2.11列出了空间和地基实验数据。
+
+（表2.11）
+
+\noindent 表2.11中，$A,B$和$C$是样品编号。试验结果表明，$\rm\mu g$下的质量输运速率依赖于材料和载体气压，其数值可以小于、大于或等于$1\rm\ g$条件下的实验值。
+\end{enumerate}
